// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmButton components should render 1`] = `
<div>
  <button
    class="button is-primary"
  >
    Button
  </button>
  <div>
    <div
      class="modal"
    >
      <div
        class="modal-background"
      />
      <div
        class="modal-card"
      >
        <header
          class="modal-card-head"
        >
          <p
            class="modal-card-title"
          >
            Please confirm
          </p>
          <button
            aria-label="close"
            class="delete"
          />
        </header>
        <section
          class="modal-card-body"
        >
          Are you sure?
        </section>
        <footer
          class="modal-card-foot"
        >
          <div
            class="field is-grouped"
          >
            <div
              class="control"
            >
              <button
                class="button is-success"
              >
                Ok
              </button>
              <button
                class="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </footer>
      </div>
      <button
        aria-label="close"
        class="modal-close is-large"
      />
    </div>
  </div>
</div>
`;

exports[`ConfirmButton components should render a button 1`] = `
<div>
  <button
    class="button is-primary"
  >
    Send
  </button>
  <div>
    <div
      class="modal"
    >
      <div
        class="modal-background"
      />
      <div
        class="modal-card"
      >
        <header
          class="modal-card-head"
        >
          <p
            class="modal-card-title"
          >
            confirm
          </p>
          <button
            aria-label="close"
            class="delete"
          />
        </header>
        <section
          class="modal-card-body"
        >
          Are you sure you want to send the message?
        </section>
        <footer
          class="modal-card-foot"
        >
          <div
            class="field is-grouped"
          >
            <div
              class="control"
            >
              <button
                class="button is-success"
              >
                Ok
              </button>
              <button
                class="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </footer>
      </div>
      <button
        aria-label="close"
        class="modal-close is-large"
      />
    </div>
  </div>
</div>
`;
